@@ -36,7 +36,8 @@ trait SparkITest extends BeforeAndAfterEach { self: Suite =>
       // Disable GA collection by default
       env.sparkConf.flatMap( p => Seq("--conf", s"${p._1}=${p._2}") ) ++
       Seq("--conf", "spark.ext.h2o.disable.ga=true") ++
-      Seq[String](env.testJar)
+      Seq[String](env.testJar) ++
+      Seq("--conf","spark.driver.extraJavaOptions=\"-XX:MaxPermSize=384m\"")
 
     if(!env.sparkMaster.startsWith("yarn")) {
       SparkSubmit.main(cmdLine.toArray)
